--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@
 
       <ul class="list-group">
         <li class="list-group-item" style="color: black;">How to BUY JAPANGN</li>
-        <li class="list-group-item list-group-item-primary">1. Have or create a Phantom wallet <button style="background-color: #ab9ff2; font-size: 18px;
+        <li class="list-group-item list-group-item-primary">1. Have or create a Phantom wallet <br/><br/><button style="background-color: #ab9ff2; font-size: 18px;
           font-weight: bold;"> <a href="https://phantom.app">Get Phantom Wallet</a></button></li>
          <li class="list-group-item list-group-item-primary">2. Buy either USDC or SOLANA and send it your wallet</li>
-        <li class="list-group-item list-group-item-primary">3. When token is launched. Click below. <a href="https://jup.ag/swap/USDC-5QzuVRhjbQQ6xq8ZszhDQygJtzFtZWcpKHNWAbbx32aH">
+        <li class="list-group-item list-group-item-primary">3. When token is launched. Click below. <br/><br/><a href="https://jup.ag/swap/USDC-5QzuVRhjbQQ6xq8ZszhDQygJtzFtZWcpKHNWAbbx32aH">
           <button class="jupiter-button">
           <img src="https://jup.ag/svg/jupiter-logo.svg" alt="Jupiter Logo" class="jupiter-logo">
           Trade on Jupiter
