--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     }, 1000);
 });
   function scrolltocount(){
-    var scroll_item = document.getElementsByClassName('countdown-container')[0];
-    scroll_item.scrollIntoView();
+        window.scrollTo(0,10000);
+
   }
   </script>
   <style>
