--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
         Those that have decided to mortgage our destinies must understand that we are in charge. <br/>
         
-        Since we can't Japa Nigeria. Let's Japa NGN.<br /><br />
+        We no go gree again. Let's Japa NGN.<br /><br />
 
        
 
