--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
    
   </footer>
   <br/>
-  <p style="padding: 15px">DISCLOSURE: By purchasing JAPANGN coin, you agree that you are not purchasing a security  or investment contract and you agree to hold the team harmless and not liable for any loses or taxes you may incur. Although JAPANGN is a community driven Defi Ecosystem and not a registered digital currency, always make sure that you are in compliance with local laws and regulations before you make any purchase.</p> <br/>
+  <p style="padding: 15px">DISCLOSURE: By purchasing JAPANGN Token, you agree that you are not purchasing a security  or investment contract and you agree to hold the team harmless and not liable for any loses or taxes you may incur. Although JAPANGN is a community driven Defi Ecosystem and not a registered digital currency, always make sure that you are in compliance with local laws and regulations before you make any purchase.</p> <br/>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
