--- a/index.html
+++ b/index.html
@@ -325,7 +325,12 @@
         <p style="color:black; font-size: 24px; font-weight: bold; border: 1px solid black;"> Ticker: JAPANGN</p> 
         <p style="color:black; padding: 15px; word-wrap: break-word; border: 1px solid black;"><b>Tax: 0</b></p> <br />
 
-        Introducing JAPANGN the latest sensation in the world of meme coins on the SOLANA blockchain! <br /> <br />
+        Introducing JAPANGN the latest sensation in the world of meme tokens on the SOLANA blockchain! <br /> <br />
+
+
+        As one of the worst performing currencies in the world, the naira has gained the attention of the meme token world which seeks to mock it. <br /> <br />
+
+      
 
         While the future of the Naira Jaga Jaga...The supply of JAPANGN is locked at 10 Billion tokens. No matter how bad the Yeye politicians destroy the Naira and print them into existence.  The future value of JAPANGN token is controlled by the people. <br/>
 
