--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         Introducing JAPANGN the latest sensation in the world of meme tokens on the SOLANA blockchain! <br /> <br />
 
 
-        As one of the worst performing currencies in the world, the naira has gained the attention of the meme token world which seeks to mock it. <br /> <br />
+        As one of the worst performing currencies in the world, the Naira has gained the attention of the meme token world which seeks to mock it. <br /> <br />
 
       
 
