--- a/index.html
+++ b/index.html
@@ -328,11 +328,14 @@
         Introducing JAPANGN the latest sensation in the world of meme tokens on the SOLANA blockchain! <br /> <br />
 
 
-        As one of the worst performing currencies in the world, the Naira has gained the attention of the meme token world which seeks to mock it. <br /> <br />
+        As one of the worst performing currencies in the world, the Naira has gained the attention of the meme token world which is now joking about the Naira being so low. <br /> <br />
 
+        Maybe one day the meme token JAPANGN will be worth more than the Naira itself. No be juju be that? <br /> <br />
+
+
+        While the future of the Naira Jaga Jaga...The supply of JAPANGN is locked at 10 Billion tokens. <br /> <br />
       
-
-        While the future of the Naira Jaga Jaga...The supply of JAPANGN is locked at 10 Billion tokens. No matter how bad the Yeye politicians destroy the Naira and print them into existence.  The future value of JAPANGN token is controlled by the people. <br/>
+       No matter how bad the Yeye politicians destroy the Naira and print them into existence.  The future value of JAPANGN token is controlled by the people. <br/>
 
         Those that have decided to mortgage our destinies must understand that we are in charge. <br/>
         
