--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         Introducing JAPANGN the latest sensation in the world of meme tokens on the SOLANA blockchain! <br /> <br />
 
 
-        As one of the worst performing currencies in the world, the Naira has gained the attention of the meme token world which is now joking about the Naira being so low. <br /> <br />
+        As one of the worst performing currencies in the world, the Naira has gained the attention of the meme token world which is now making a joke of it. <br /> <br />
 
         Maybe one day the meme token JAPANGN will be worth more than the Naira itself. No be juju be that? <br /> <br />
 
