--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
 
     </div>
-    <button class="top-page-button" style="float: right;" onclick="scrolltocount()">Buy JAPANGN Now</button>
+    <a href="https://jup.ag/swap/USDC-5QzuVRhjbQQ6xq8ZszhDQygJtzFtZWcpKHNWAbbx32aH"><button class="top-page-button" style="float: right;" >Buy JAPANGN Now</button></a>
 
     <div id="intro2">
 
@@ -344,28 +344,7 @@
 
 
     </div>
-    <div class="countdown-container">
-      <h2> Countdown to Launch</h2>
-
-      <div class="countdown">
-          <div class="time">
-              <span class="days"></span>
-              <div class="labelx">Days</div>
-          </div>
-          <div class="time">
-              <span class="hours"></span>
-              <div class="labelx">Hours</div>
-          </div>
-          <div class="time">
-              <span class="minutes"></span>
-              <div class="labelx">Minutes</div>
-          </div>
-          <div class="time">
-              <span class="seconds"></span>
-              <div class="labelx">Seconds</div>
-          </div>
-      </div>
-  </div>
+   
   
 
 
@@ -376,7 +355,7 @@
         <li class="list-group-item list-group-item-primary">1. Have or create a Phantom wallet <br/><br/><button style="background-color: #ab9ff2; font-size: 18px;
           font-weight: bold;"> <a href="https://phantom.app">Get Phantom Wallet</a></button></li>
          <li class="list-group-item list-group-item-primary">2. Buy either USDC or SOLANA and send it your wallet</li>
-        <li class="list-group-item list-group-item-primary">3. When token is launched. Click below. <br/><br/><a href="https://jup.ag/swap/USDC-5QzuVRhjbQQ6xq8ZszhDQygJtzFtZWcpKHNWAbbx32aH">
+        <li class="list-group-item list-group-item-primary">3. Click below. <br/><br/><a href="https://jup.ag/swap/USDC-5QzuVRhjbQQ6xq8ZszhDQygJtzFtZWcpKHNWAbbx32aH">
           <button class="jupiter-button">
           <img src="https://jup.ag/svg/jupiter-logo.svg" alt="Jupiter Logo" class="jupiter-logo">
           Trade on Jupiter
