--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
 
     </div>
-    <a href="https://jup.ag/swap/USDC-5QzuVRhjbQQ6xq8ZszhDQygJtzFtZWcpKHNWAbbx32aH"><button class="top-page-button" style="float: right;" >Buy JAPANGN Now</button></a>
+    <a href="https://jup.ag/swap/USDC-5QzuVRhjbQQ6xq8ZszhDQygJtzFtZWcpKHNWAbbx32aH"><button class="top-page-button"  >Buy JAPANGN Now</button></a>
 
     <div id="intro2">
 
