--- a/index.html
+++ b/index.html
@@ -190,10 +190,13 @@
             <p><strong>Contract Address:</strong> <a style="text-decoration: none;" href="https://solscan.io/token/5QzuVRhjbQQ6xq8ZszhDQygJtzFtZWcpKHNWAbbx32aH"> <span style="word-wrap: break-word;" id="contract-address">5QzuVRhjbQQ6xq8ZszhDQygJtzFtZWcpKHNWAbbx32aH</span></a></p><br/>
             <div class="price-container" style="justify-content: center;">
                 <div style="display: flex; justify-content: center; margin: 10px 0;">
-                    <button id="unmuteButton"></button>
+                    <video width="auto" height="360" controls>
+                        <source src="VID-20240908-WA0002.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
     <p><strong>Total Supply:</strong> <span>10B JAPANGN</span></p>
-    <p class="market-cap"><strong>Total Market Cap:</strong> <span id="market-cap">$0.00</span></p>
+    <p class="market"><strong>Total Market Cap:</strong> <span id="market">$18700.00</span></p>
     <p id="as-of-date"></p> <!-- Placeholder for the current date -->
 
   </div>
